[gd_scene load_steps=8 format=2]

[ext_resource path="res://TileSets/Door/door1.png" type="Texture" id=1]
[ext_resource path="res://TileSets/Door/door2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.0
height = 32.0

[sub_resource type="Animation" id=2]
resource_name = "Close"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 81.75, 42.25 )

[node name="Door" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14, 14 )
scale = Vector2( 1.95313, 1.96875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 13, 22 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )

[node name="Enter_Checker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enter_Checker"]
position = Vector2( -26.25, 22.25 )
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_entered" from="Enter_Checker" to="." method="_on_Enter_Checker_body_entered"]
[connection signal="body_exited" from="Enter_Checker" to="." method="_on_Enter_Checker_body_exited"]
